# Reporting_Automation

./: .gitignore  README.md  how_to_use_reporting_automation_tool.html  index.html  privacy_policy.html  pyproject.toml  terms_of_service.html
src/reporting_automation/: reporting_automation.py
